# TAIGA

./: README.md
programs/FSHAL/: CMakeLists.txt  main.cpp
programs/FSHAL/include/: axis.h  coin3D.h  data.h  globals.h
programs/FSHAL/src/: axis.cpp  coin3D.cpp  data.cpp
programs/PoolTree/: Makefile  pooltree.cpp
programs/TGrande/: CMakeLists.txt  main.cpp
programs/TGrande/include/: globals.h  grande.h
programs/TGrande/src/: grande.cpp
programs/TMuon/: CMakeLists.txt  main.cpp
programs/TMuon/include/: globals.h  muon.h
programs/TMuon/src/: muon.cpp
programs/deltaT/: CMakeLists.txt  README  deltaT.cpp
programs/muon_rs/: CMakeLists.txt  delay  main.cpp
programs/muon_rs/include/: Analysis.hpp  globals.h
programs/muon_rs/src/: Analysis.cpp
scripts/: readED.py  time.py
